# CIEPAL-Project

./: .env  CIPEPAL_Service.py  README.md  app.py  backend.py  ciepal_service.py  models.py  pyproject.toml  requirements.txt
